--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1 id="location">City</h1>
             <h3><span id="temperature">0</span>&deg;C</h3>
             <h1 class="lead">  <i class="fas fa-wind"> </i> <span id="wind-speed">   </span>  </h1>
-            <h1 id="weather-condition" class="lead">Clouds</h1>
+            <h1 id="weather-condition" class="lead">Condition</h1>
         </div>
     </div>
  
